# dunnobot

./: .gitignore  pyproject.toml
.github/workflows/: test.yml
src/: main.py
src/apis/: dicebear.py  github.py  sona.py  xkcd.py
src/exts/: essential.py
src/exts/fun/: ai.py  sona.py  xkcd.py
src/exts/games/: connectfour.py  tictactoe.py
src/exts/tools/: ai.py  dicebear.py  github.py
src/games/: connect4.py  discord.py  tictactoe.py
src/tests/: github_test.py  tictactoe_test.py  toki_pona_test.py  xkcd_test.py
